# glue

./: .gitignore  .tool-versions  glue.code-workspace  setup.sh
BondsToS3/: notebook.ipynb  pyproject.toml
BondsToS3/infra/: backend.tf  dynamodb.tf  glue-crawlers.tf  glue-database.tf  glue-job.tf  iam.tf  locals.tf  s3.tf
BondsToS3/src/: BondsToS3.py
EODToS3/: notebook.ipynb  pyproject.toml
EODToS3/infra/: backend.tf  dynamodb.tf  glue-crawlers.tf  glue-database.tf  glue-job.tf  locals.tf  s3.tf
EODToS3/src/: EODToS3.py
EarningsToS3/: notebook.ipynb  pyproject.toml  setup.sh
EarningsToS3/infra/: backend.tf  dynamodb.tf  glue-crawlers.tf  glue-database.tf  glue-job.tf  lambda.tf  locals.tf
EarningsToS3/infra/schemas/: earnings.json
EarningsToS3/src/: EarningsToS3.py
EconomicEventsToS3/: README.md  notebook.ipynb  pyproject.toml
EconomicEventsToS3/infra/: backend.tf  dynamodb.tf  glue-crawlers.tf  glue-database.tf  glue-job.tf  locals.tf
EconomicEventsToS3/src/: EconomicEventsToS3.py
MacroToS3/: notebook.ipynb  pyproject.toml  start_notebook.sh
MacroToS3/infra/: backend.tf  glue-crawlers.tf  glue-job.tf  (+1 more)
MarketCap/: news-raw-notebook.ipynb  notebook.ipynb  pyproject.toml
NewsToS3/: notebook.ipynb  pyproject.toml
OptionsToS3/: OptionsToS3.ipynb  OptionsToS3.json  OptionsToS3.py  pyproject.toml  start_notebook.sh
OptionsToS3/infra/: backend.tf  dynamodb.tf  glue-crawlers.tf  glue-database.tf  glue-job.tf  locals.tf  s3.tf
OptionsToS3/lib/: OptionsToS3.py
OptionsToS3/src/: OptionsToS3.py
PublishAllToS3/: notebook.ipynb  pyproject.toml
(+32 files in other folders)
